--- a/cv/index.html
+++ b/cv/index.html
@@ -19,7 +19,7 @@
 <div id="webaddress">
 <i class="fa fa-envelope"></i> <a href="mailto:er.ramirez@gmail.com">er.ramirez@gmail.com</a>
 |
-<i class="fa fa-phone" aria-hidden="true"></i> 480-225-0002 
+<i class="fa fa-phone" aria-hidden="true"></i> 480-225-0002
 |
 <i class="fa fa-laptop"></i> <a href="http://ernestoramirez.com">ernestoramirez.com</a>
 |
@@ -108,8 +108,11 @@
 
 <h3 id="journal-articles">Journal Articles</h3>
 
+<p><code class="highlighter-rouge">2017</code>
+<p>Kulinna PH, <strong>Ramirez ER</strong>, Jahn JA, Cothran DJ, Burns RD, Kloeppel T. Predictors of Native American children's perceived status of health and physical shape. Journal of Applied Behavioral Research. 2017;00:e12089. https://doi.org/10.1111/jabr.12089.</p>
+
 <p><code class="highlighter-rouge">2013</code>
- <strong>Ramirez, E.</strong> &amp; Wipfli, B. (2013). Stress reactivity in humans and animals: two meta-analyses. InternationalJournal of Exercise Science, 6(2), 7.</p>
+ <strong>Ramirez, E.</strong> &amp; Wipfli, B. (2013). Stress reactivity in humans and animals: two meta-analyses. International Journal of Exercise Science, 6(2), 7.</p>
 
 <p>Li, I., Froehlich, J., Larsen, J.E., Grevet, C., &amp; <strong>Ramirez, E.</strong> (2013). Personal informatics in the wild. In CHI ’13 Extended Abstracts on Human Factors in Computing Systems. New York, New York, USA: ACM Press.</p>
 
@@ -163,34 +166,6 @@ Norman, G.J., Kolodziejczyk, J.K., Hekler, E.B., &amp; <strong>Ramirez, E.R.</st
 
 <p><code class="highlighter-rouge">2008</code>	NIH Minority Supplement, Physical Activity Location Measurement System</p>
 
-<h2 id="links">Links</h2>
-<ul>
-  <li><i class="fa fa-envelope"></i> <a href="mailto:er.ramirez@gmail.com">er.ramirez@gmail.com</a><br /></li>
-  <li><i class="fa fa-laptop"></i> <a href="http://ernestoramirez.com">ernestoramirez.com</a><br /></li>
-  <li><i class="fa fa-github"></i> <a href="http://github.com/erramirez">erramirez</a><br /></li>
-  <li><i class="fa fa-twitter"></i> <a href="http://twitter.com/eramirez">@eramirez</a><br /></li>
-  <li><i class="fa fa-medium" aria-hidden="true"></i> <a href="http://medium.com/@eramirez">@eramirez</a><br /></li>
-  <li><i class="fa fa-google"></i> <a href="https://scholar.google.com/citations?hl=en&amp;user=myT66_YAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">scholar</a></li>
-</ul>
-
-<h2 id="references">References</h2>
-<p><strong>Gary Wolf</strong>, <em>Director, Quantified Self Labs</em></p>
-
-<p><i class="fa fa-envelope"></i> <a href="mailto:gary@quantifiedself.com">gary@quantifiedself.com</a></p>
-
-<p><i class="fa fa-phone" aria-hidden="true"></i> 646-528-4264</p>
-
-<p><strong>Kevin Patrick, MD</strong>, <em>Director, Center for Wireless and Population Health Systems, UCSD</em></p>
-
-<p><i class="fa fa-envelope"></i> <a href="mailto:gary@quantifiedself.com">kpatrick@ucsd.edu</a></p>
-
-<p><i class="fa fa-phone" aria-hidden="true"></i> 858-663-0531</p>
-
-<p><strong>Joe Smyser, PhD</strong>, <em>CEO, The Public Good Projects</em></p>
-
-<p><i class="fa fa-envelope"></i> <a href="mailto:joe.smyser@publicgoodprojects.org">joe.smyser@publicgoodprojects.org</a></p>
-
-<p><i class="fa fa-phone" aria-hidden="true"></i> 805-729-6490</p>
 
 <!-- ### Footer
 
