updated now page

--- a/now/index.html
+++ b/now/index.html
@@ -29,7 +29,7 @@
 <div class="article-meta">
 <h1><span class="title">/now/</span></h1>
 
-<h3 class="date">2017-07-04</h3>
+<h3 class="date">2017-09-10</h3>
 
 <p class="terms">
   
@@ -45,39 +45,41 @@
 <main>
 
 
-<h2 id="current-work">Current / Work</h2>
-
-<p>We just wrapped up our Spring/Summer conference season, and I&rsquo;m glad to be home where I can focus on core features, developing new relationships, and growing business.</p>
-
-<p>One of my most exciting <em>side</em> projects is developing an example code library for analyzing Fitabase data with R. Should be online before the end of July (if I get over my nervousness about making it public).</p>
-
 <h2 id="current-life">Current / Life</h2>
 
-<p>Life is moving along nicely. We&rsquo;re currently in the market for a new car, as my 2003 Hyundai is about to die. <em>Seriously</em>. We asked a dealership to give us a quote on it as a trade-in and within 5 minutes they said, &ldquo;Just donate it.&rdquo;</p>
+<p>The only news that matters here is that Laura and I are excited to welcome a new member to our little family next year.</p>
 
-<p>Starting to get antsy for our upcoming family vacation to Kauai. October can&rsquo;t come fast enough.</p>
+<p><img src="/images/babyramuilar.jpg" alt="" /></p>
+
+<p>(you can see my mom <a href="https://www.instagram.com/p/BYlmlXVHisH/?taken-by=erramirez">freak out about it here</a>)</p>
+
+<h2 id="current-work">Current / Work</h2>
+
+<p>We&rsquo;re chugging along and working on support some really neat research and public projects. Can&rsquo;t wait to get those announced soon. .</p>
+
+<p>Still working on this <em>side</em> project where I am developing an example code library for analyzing Fitabase data with R. Adding bits and pieces when I have time so it&rsquo;s not moving as fast as I want, but hopefully getting it our the door soon.</p>
 
 <h2 id="exercise-health">Exercise / Health</h2>
 
-<p>I just wrapped up my &ldquo;biggest&rdquo; week running since 2015, with a total of 40mi ran. I&rsquo;m trying to be more consistent and stick to a polarized training schedule (80% easy / 20% hard), but mostly I&rsquo;m just winging it.</p>
+<p>Laura and I had a fantastic time racing Hood to Coast with our friends in Portland. It was our fourth HTC adventure, and our fastest race to date. I also clocked in a decent 5K time the weekend after at the 3rd Annual HBD LA 5K.</p>
 
-<p><em>Next Race</em>: Hood to Coast (Oregon)</p>
+<p><em>Next Race</em>: Chistmas Run 10K (December)</p>
 
-<p><strong>Current Weight</strong>: 166<br />
+<p><strong>Current Weight</strong>: 160<br />
 <strong>Goal Weight</strong>: 155</p>
-
-<p>I am trying to find the time, energy, and mostly, the motivation to start adding more strength-building exercises into my daily schedule. The gym isn&rsquo;t doing it for me.</p>
 
 <h2 id="reading">Reading</h2>
 
-<p><a href="https://www.goodreads.com/book/show/28053798-babylon-s-ashes">Bablyon&rsquo;s Ashes</a> (Book 6 of the Expanse Series)</p>
+<p>I&rsquo;ve finished the currently available Expanse Series books and am looking forward to seeing how the authors wrap it up over the final two books. Bummed I have to wait though.</p>
+
+<p>Currently I&rsquo;m reading <a href="https://www.goodreads.com/book/show/34017126-the-stone-sky">The Stone Sky</a>, which is Book 3 in the Broken Earth Trilogy. Nearly done and it&rsquo;s fantastic. I&rsquo;ll be sad to see this end, but so glad it exists in the world.</p>
 
 <h2 id="listening-music">Listening / Music</h2>
 
 <ul>
-<li>Hunting down all Chance The Rapper guest appearances</li>
-<li>Riz MC</li>
-<li>Open Mike Eagle</li>
+<li>New Kesha</li>
+<li>Raury</li>
+<li>Donnie Trumpet and the Social Experiment</li>
 </ul>
 
 <h2 id="listening-podcasts">Listening / Podcasts</h2>
