updated now page

--- a/now/index.html
+++ b/now/index.html
@@ -55,7 +55,7 @@
 
 <h2 id="current-work">Current / Work</h2>
 
-<p>We&rsquo;re chugging along and working on support some really neat research and public projects. Can&rsquo;t wait to get those announced soon. .</p>
+<p>We&rsquo;re chugging along and working on support some really neat research and public projects. Can&rsquo;t wait to get those announced soon.</p>
 
 <p>Still working on this <em>side</em> project where I am developing an example code library for analyzing Fitabase data with R. Adding bits and pieces when I have time so it&rsquo;s not moving as fast as I want, but hopefully getting it our the door soon.</p>
 
