fixed category link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p>What am I up to right <a href="/now/">now</a>?</p>
 
-<p>Since late 2015 I&rsquo;ve been fiddling around with <strong>R</strong>. By no means am I an expert, but I like exploring it&rsquo;s depth and learning how to apply new methods to data I work with and/or find interesting. Check out my <strong>R</strong> miscellenea by exploring <a href="/categories/R">/categories/R</a>.</p>
+<p>Since late 2015 I&rsquo;ve been fiddling around with <strong>R</strong>. By no means am I an expert, but I like exploring it&rsquo;s depth and learning how to apply new methods to data I work with and/or find interesting. Check out my <strong>R</strong> miscellenea by exploring <a href="/categories/r">/categories/R</a>.</p>
 
 <p>You can view the most recent <a href="/post/">posts</a> below, including brief notes. If you&rsquo;d like to see all notes, please visit <a href="/note/">/note/</a>.</p>
 
