update to skills and cv design

--- a/cv/index.html
+++ b/cv/index.html
@@ -34,9 +34,9 @@
 
 <h2 id="employment">Employment</h2>
 
-<p><code class="highlighter-rouge">2016-</code> <strong>Director of Research & Development, Fitabase / Small Steps Labs, LLC</strong></p>
+<p><code class="highlighter-rouge">2016-</code> <strong>Director of Research & Development, Fitabase / Small Steps Labs LLC</strong></p>
 
-<p>Leading new feature development and special projects for Fitabase, a data management and analytical tool wearble devices deployed in research studies and healthcare innovation projects.   </p>
+<p>Leading new feature development and special projects for Fitabase, the leading data management and analytical platform for wearble devices deployed in research studies and healthcare innovation projects.</p>
 
 <p><code class="highlighter-rouge">2014-16</code> <strong>Program Director, Quantified Self Labs</strong></p>
 
@@ -162,6 +162,13 @@ Norman, G.J., Kolodziejczyk, J.K., Hekler, E.B., &amp; <strong>Ramirez, E.R.</st
 <p><code class="highlighter-rouge">2010</code> 	NIH Minority Supplement, Social and Mobile Approaches to Weight Loss</p>
 
 <p><code class="highlighter-rouge">2008</code>	NIH Minority Supplement, Physical Activity Location Measurement System</p>
+
+<h2 id="awards">Skills</h2>
+<ul>
+  <li>Research and Evaluation<br /></li>
+  <li>Presentation and Dissemination<br /></li> 
+  <li>Public Speaking<br /></li> 
+  <li>Data Analysis: Proficient in R<br /></li> 
 
 <h2 id="links">Links</h2>
 <ul>
