edits and updates

--- a/cv/index.html
+++ b/cv/index.html
@@ -163,12 +163,11 @@ Norman, G.J., Kolodziejczyk, J.K., Hekler, E.B., &amp; <strong>Ramirez, E.R.</st
 
 <p><code class="highlighter-rouge">2008</code>	NIH Minority Supplement, Physical Activity Location Measurement System</p>
 
-<h2 id="awards">Skills</h2>
-<ul>
-  <li>Research and Evaluation<br /></li>
-  <li>Presentation and Dissemination<br /></li> 
-  <li>Public Speaking<br /></li> 
-  <li>Data Analysis: Proficient in R<br /></li> 
+<h2 id="skills">Skills</h2>
+<p>Research and Evaluation</p>
+<p>Presentation and Dissemination</p>
+<p>Public Speaking</p>
+<p>Data Analysis: Proficient in R</p>
 
 <h2 id="links">Links</h2>
 <ul>
@@ -186,13 +185,13 @@ Norman, G.J., Kolodziejczyk, J.K., Hekler, E.B., &amp; <strong>Ramirez, E.R.</st
 <p><i class="fa fa-envelope"></i> <a href="mailto:gary@quantifiedself.com">gary@quantifiedself.com</a></p>
 
 <p><i class="fa fa-phone" aria-hidden="true"></i> 646-528-4264</p>
-
+<br />
 <p><strong>Kevin Patrick, MD</strong>, <em>Director, Center for Wireless and Population Health Systems, UCSD</em></p>
 
 <p><i class="fa fa-envelope"></i> <a href="mailto:gary@quantifiedself.com">kpatrick@ucsd.edu</a></p>
 
 <p><i class="fa fa-phone" aria-hidden="true"></i> 858-663-0531</p>
-
+<br />
 <p><strong>Joe Smyser, PhD</strong>, <em>CEO, The Public Good Projects</em></p>
 
 <p><i class="fa fa-envelope"></i> <a href="mailto:joe.smyser@publicgoodprojects.org">joe.smyser@publicgoodprojects.org</a></p>
