edits and additions

--- a/cv/index.html
+++ b/cv/index.html
@@ -67,13 +67,15 @@
 
 <h2 id="invited-talks">Invited Talks</h2>
 
+<p><code class="highlighter-rouge">2017</code>
+<strong>Data Driven Health</strong> Health Technology Forum (Panel Moderator)</p>
 <p><code class="highlighter-rouge">2016</code>
 <strong>Innovations in Behavior Measurement</strong> Mathematica Policy Research</p>
 
 <p><strong>Innovations in Behavior Measurement</strong> Agents of Change Summit</p>
 
 <p><code class="highlighter-rouge">2015</code>
-<strong>Health Data from Wearables: Clinical Implications of the Quantified Self</strong> American Medical Informatics Association Annual Conference (panelist)</p>
+<strong>Health Data from Wearables: Clinical Implications of the Quantified Self</strong> American Medical Informatics Association Annual Conference (Panelist)</p>
 
 <p><strong>Quantified Self &amp; Personal Data</strong> Data and Innovation at the Climate-Health Nexus, White House Office of Science and Technology Policy</p>
 
@@ -90,7 +92,7 @@
 <p><code class="highlighter-rouge">2012</code>
 <strong>Know Thyself</strong> Medicine X</p>
 
-<p><strong>Quantified Self: A Pathway to Personal Health</strong> Digital Health Communications Extravaganza (DHCX)</p>
+<p><strong>Quantified Self: A Pathway to Personal Health</strong> Digital Health Communications Extravaganza</p>
 
 <h2 id="publications">Publications</h2>
 
