--- a/cv/index.html
+++ b/cv/index.html
@@ -148,6 +148,7 @@ Norman, G.J., Kolodziejczyk, J.K., Hekler, E.B., &amp; <strong>Ramirez, E.R.</st
 <p><code class="highlighter-rouge">2008</code>	NIH Minority Supplement, Physical Activity Location Measurement System</p>
 
 <h2 id="skills">Skills</h2>
+<p>Health Behavior Science</p>
 <p>Research and Evaluation</p>
 <p>Presentation and Dissemination</p>
 <p>Public Speaking</p>
