updated to new role

--- a/about/index.html
+++ b/about/index.html
@@ -49,10 +49,9 @@
 
 <h2 id="work">Work</h2>
 
-<p>I&rsquo;m the Director of Research and Development for <a href="http://www.fitabase.com">Fitabase</a>. We&rsquo;re the leading data management platform for researchers and clinicians who want to use wearables in their research project and health care innovation projects.</p>
+<p>I&rsquo;m a Senior Data Scientist at Evidation Health, a new kind of health and measurement company that provides the world’s most innovative healthcare ecosystem players the technology and expertise they need to understand how everyday behavior and health interact. As part of the multi-disciplinary data science team at Evidation, I participate in hands-on work with projects that are exploring digital biomarker development and the unique health-related signals present within large-scale longitudinal patient-generated data, primarily for clients in the biopharma space.</p>
 
-<p>Prior to Fitabase, I was the Program Director for Quantified Self Labs, a California based LLC that supports the worldwide
-<a href="http://www.quantifiedself.com">Quantified Self</a> community.</p>
+<p>Prior to Evidation, I was Director of Research and Development at <a href="http://www.fitabase.com">Fitabase</a>.</p>
 
 <h2 id="education">Education</h2>
 
