--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <h1 id="hi-i-m-ernesto-ramirez">Hi, I&rsquo;m Ernesto Ramirez.</h1>
 
-<p>I&rsquo;m the Director of R&amp;D at <strong><a href="http://www.fitabase.com">Fitabase</a></strong>, where I&rsquo;m helping researchers take advantage of the full potential offered by consumer mhealth tools. I&rsquo;m a public health researcher by training, but have a keen interest in understanding how personal data can be used for public good. Here, you&rsquo;ll find some thoughs, tools, and tips on data, research, and whatever else I&rsquo;m currently working on.</p>
+<p>I&rsquo;m a Senior Data Scientist at <strong><a href="http://www.evidation.com">Evidation</a></strong>, where work hands-on with projects that are exploring digital biomarker development and the unique health-related signals present within large-scale longitudinal patient-generated data, primarily for clients in the biopharma space. I&rsquo;m a public health researcher by training, but have a keen interest in understanding how personal data can be used for public good. Here, you&rsquo;ll find some thoughs, tools, and tips on data, research, and whatever else I&rsquo;m currently working on.</p>
 
 <p>What am I up to right <a href="/now/">now</a>?</p>
 
